--- a/Frontend/src/components/ProfilePage/ProfileSection/profileSection.scss
+++ b/Frontend/src/components/ProfilePage/ProfileSection/profileSection.scss
@@ -2,16 +2,21 @@
     margin: 10px auto;
 
     @media (min-width: 1024px) {
-        width: 50%;
+        width: 70%;
     }
 }
 
 .profile-section__form {
     display: flex;
+    flex-direction: column;
     align-content: center;
     align-items: center;
     justify-content: space-around;
     width: 100%;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+    }
 }
 
 .profile-section__title {
@@ -23,19 +28,27 @@
 
 .profile-section__image-block {
     align-self: flex-start;
-    width: 50%;
+    width: 90%;
     padding: 10px;
+
+    @media (min-width: 768px) {
+        width: 50%;
+    }
 }
 
 .profile-section__user-image {
-    width: 70%;
-    margin: 0 auto;
+    display: block;
+    width: auto;
+    max-width: 300px;
+    height: auto;
+    max-height: 500px;
+    margin: auto;
 }
 
 .profile-section__add-image-button,
 .profile-section__delete-image-button {
-    width: 30%;
-    margin: 0 10px;
+    width: 40%;
+    padding: 5px;
     font-family: "Lucida Sans", sans-serif;
     background-color: transparent;
     border: 1px #106cc8 solid;
@@ -43,7 +56,11 @@
 }
 
 .profile-section__user-info {
-    width: 50%;
+    width: 100%;
+
+    @media (min-width: 768px) {
+        width: 50%;
+    }
 }
 
 .profile-section__field {
@@ -66,10 +83,16 @@
     border-radius: 5px;
 }
 
+.profile-section__buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
 .profile-section__save-button,
 .profile-section__close-button {
     width: 40%;
-    margin: 20px;
+    padding: 5px;
     font-family: "Lucida Sans", sans-serif;
     background-color: transparent;
     border: 1px #106cc8 solid;
