--- a/Frontend/src/components/search/SearchFilterCheckBox/searchFilterCheckBox.scss
+++ b/Frontend/src/components/search/SearchFilterCheckBox/searchFilterCheckBox.scss
@@ -1,10 +1,11 @@
 .search-filter-checkbox {
-    justify-content: center;
     display: flex;
+    justify-content: center;
     width: 30%;
 }
 
 .search-filter-checkbox__title {
-    font-family: 'Lucida Sans';
+    padding-right: 3px;
     font-size: 16px;
+    font-family: 'Lucida Sans';
 }
