Updated logic for unavailable books.

--- a/Frontend/src/components/bookPage/BookInfoPage/bookInfoPage.scss
+++ b/Frontend/src/components/bookPage/BookInfoPage/bookInfoPage.scss
@@ -57,7 +57,7 @@
 .book-details-page__icon {
     width: 15px;
     height: 15px;
-    fill: #ffffff;
+    fill: #000000;
 }
 
 .book-details-page__preloader-icon {
